0922 공지사항 퍼블리싱 수정

--- a/html/7-4_공지사항-상세.html
+++ b/html/7-4_공지사항-상세.html
@@ -131,40 +131,41 @@
                         국가는 재해를 예방하고 그 위험으로부터 국민을 보호하기 위하여 노력하여야 한다. 국가는 대외무역을 육성하며, 이를 규제·조정할 수 있다. 법률안에 이의가 있을 때에는 대통령은 제1항의 기간내에 이의서를 붙여 국회로 환부하고, 그 재의를 요구할 수 있다. 국회의 폐회중에도 또한 같다.<br>
                         계엄을 선포한 때에는 대통령은 지체없이 국회에 통고하여야 한다. 국가의 세입·세출의 결산, 국가 및 법률이 정한 단체의 회계검사와 행정기관 및 공무원의 직무에 관한 감찰을 하기 위하여 대통령 소속하에 감사원을 둔다.</p>
                         <div class="file-download">
-                          <div>
-                            <div class="file-neme">
-                              <div></div>
-                              <a href="">
+                          <a href="">
+                            <div>
+                              <div class="file-neme">
+                                <div></div>
                                 <p>청년인재DB_사용자 매뉴얼 .pdf</p>
-                              </a>
+                              </div>
+                              <div class="download-btn"></div>
                             </div>
-                            <button></button>
-                          </div>
-                          <div>
-                            <div class="file-neme">
-                              <div></div>
-                              <a href="">
+                          </a>
+                          <a href="">
+                            <div>
+                              <div class="file-neme">
+                                <div></div>
                                 <p>청년인재DB_사용자 매뉴얼 .pdf</p>
-                              </a>
+                              </div>
+                              <div class="download-btn"></div>
                             </div>
-                            <button></button>
-                          </div>
-                          <div>
-                            <div class="file-neme">
-                              <div></div>
-                              <a href="">
+                          </a>
+                          <a href="">
+                            <div>
+                              <div class="file-neme">
+                                <div></div>
                                 <p>청년인재DB_사용자 매뉴얼 .pdf</p>
-                              </a>
+                              </div>
+                              <div class="download-btn"></div>
                             </div>
-                            <button></button>
-                          </div>
+                          </a>
+
                         </div>
                     </div>
                   </div>  
                 </form>
             <div class="btn-wrap form-btn-wrap flex-sb">
               <div>
-                <button class="btn-close btn-round">삭제</button>
+                <button class="btn-close btn-round mr30">삭제</button>
                 <button class="btn-wh btn-round">수정</button>
               </div>
               <div>
