--- a/html/7-5_공지사항-faq.html
+++ b/html/7-5_공지사항-faq.html
@@ -105,121 +105,94 @@
             </div>
           </div>
           <div class="faq-wrap">
-            <div>
               <!-- 질문 열었을 때 .active를 붙이면 화살표 방향이 바뀝니다. -->
-              <div class="question active">
-                <div>
-                  <div></div>
-                  <a href="">
+              <a href="">
+                <div class="question active">
+                  <div>
+                    <div class="q-icon"></div>
                     <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
+                  </div>
+                  <div class="accoBtn"></div>
                 </div>
-                <button></button>
-              </div>
+              </a>
               <div class="answer">
-                <p>청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
-                더 자세한 내용이 궁금하시다면 청년인재데이터베이스 메뉴를 통해 확인하실 수 있습니다.</p>
+                <p>
+                  청년인재데이터베이스는 국가 주요직위 인선을 지원하는 인재풀입니다.<br>공무원 및 사회 각 분야 전문가 인물 정보  를 효율적으로 관리하여, 정무직 등 국가 주요직위 인선시 전문가의 지식과 경험을 활용할 수 있게 구축된 인물정보 관리시스템입니다.<br><br>
+                    더 자세한 내용이 궁금하시다면 <a href="">청년인재데이터베이스</a> 메뉴를 통해 확인하실 수 있습니다.
+                </p>
               </div>
-            </div>
-            <div>
+            <a href="#">
               <div class="question">
                 <div>
-                  <div></div>
-                  <a href="">
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
-                <button></button>
+                <div class="accoBtn"></div>
               </div>
-            </div>
-            <div>
+            </a>
+            <a href="#">
               <div class="question">
                 <div>
-                  <div></div>
-                  <a href="">
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
-                <button></button>
+                <div class="accoBtn"></div>
               </div>
-            </div>
-            <div>
+            </a>
+            <a href="#">
               <div class="question">
                 <div>
-                  <div></div>
-                  <a href="">
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
-                <button></button>
+                <div class="accoBtn"></div>
               </div>
-            </div>
-            <div>
+            </a>
+            <a href="#">
               <div class="question">
                 <div>
-                  <div></div>
-                  <a href="">
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
-                <button></button>
+                <div class="accoBtn"></div>
               </div>
-            </div>
-            <div>
+            </a>
+            <a href="#">
               <div class="question">
                 <div>
-                  <div></div>
-                  <a href="">
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
-                <button></button>
+                <div class="accoBtn"></div>
               </div>
-            </div>
-            <div>
+            </a>
+            <a href="#">
               <div class="question">
                 <div>
-                  <div></div>
-                  <a href="">
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
-                <button></button>
+                <div class="accoBtn"></div>
               </div>
-            </div>
-            <div>
+            </a>
+            <a href="#">
               <div class="question">
                 <div>
-                  <div></div>
-                  <a href="">
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
-                <button></button>
+                <div class="accoBtn"></div>
               </div>
-            </div>
-            <div>
+            </a>
+                        <a href="#">
               <div class="question">
                 <div>
-                  <div></div>
-                  <a href="">
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
+                  <div class="q-icon"></div>
+                  <p>청년인재데이터베이스가 무엇인가요?</p>
                 </div>
-                <button></button>
+                <div class="accoBtn"></div>
               </div>
-            </div>
-            <div>
-              <div class="question">
-                <div>
-                  <div></div>
-                  <a href="">
-                    <p>청년인재데이터베이스가 무엇인가요?</p>
-                  </a>
-                </div>
-                <button></button>
-              </div>
-            </div>
+            </a>
           </div>
           <div class="pagination">
             <button class="prev"></button>
