--- a/html/7-1_공지사항-목록.html
+++ b/html/7-1_공지사항-목록.html
@@ -96,14 +96,18 @@
         <div class="row">
           <form>
             <div class="table-top">
-              <div>
+              <div class="flex">
                 <select name="sel" id="sel" class="select-nomal w130">
-                  <option value="기본선택">기본선택</option>
+                  <option value="기본선택">제목</option>
                   <option value="선택1">선택1</option>
                   <option value="선택2">선택2</option>
                   <option value="선택3">선택3</option>
                 </select>
-                <input type="text" class="search-nomal w300" placeholder= "검색어를 입력해주세요.">
+                <div class="search-wrap ml10">
+                  <input type="text" class="search-nomal w300" placeholder= "검색어를 입력해주세요.">
+                  <button class="search-icon"></button>
+                </div>
+
               </div>
               <div>
                 <button class="btn-post btn-nomal">글 작성</button>
