--- a/html/7-2_공지사항-작성.html
+++ b/html/7-2_공지사항-작성.html
@@ -140,7 +140,7 @@
                           <p>비밀번호</p>
                         </div>
                         <div>
-                          <input type="text" class="input-nomal w300" placeholder="비밀번호 입력">
+                          <input type="password" class="input-nomal w300" placeholder="비밀번호 입력">
                         </div>
                       </div>
                     </div>
