0923 공지사항 목록 페이지네이션 수정

--- a/html/7-1_공지사항-목록.html
+++ b/html/7-1_공지사항-목록.html
@@ -210,7 +210,8 @@
               </table>
             </div>
             <div class="pagination">
-                <button class="prev"></button>
+              <!-- .active 를 붙이면 활성화 된 버튼으로 변경됩니다. -->
+                <button class="prev active"></button>
                 <button class="page">1</button>
                 <button class="page active">2</button>
                 <button class="next"></button>
