--- a/html/1-11_회원가입-가입내역인쇄(기관용).html
+++ b/html/1-11_회원가입-가입내역인쇄(기관용).html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/dataform.css">
     <link rel="stylesheet" href="/css/join.css">
@@ -130,8 +130,6 @@
                         <button class="btn-wh btn-round print-btn">가입내역 인쇄</button>
                         <button class="btn-bl btn-round">완료</button>
                     </div>
-                </div>   
-                
             </form>
             
         </div>
@@ -198,7 +196,7 @@
                 <input type="text" class="input-nomal" placeholder="검색어를 입력해주세요">
                 <button  type='button' class="btn-wh btn-nomal">검색</button>
             </div>
-            <p class="table-val-num">전체 <span>1</span>건</ㅔ>
+            <p class="table-val-num">전체 <span>1</span>건</p>
             <table class="modal-table">
                 <caption>기관 조회 결과</caption>
                 <tr>
