--- a/html/3-1_인재정보등록-신청.html
+++ b/html/3-1_인재정보등록-신청.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" integrity="sha512-aOG0c6nPNzGk+5zjwyJaoRUgCdOrfSDhmMID2u4+OIslr0GjpLKo7Xm0Ao3xmpM4T8AmIouRkqwj1nrdVsLKEQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/dataform.css">
 
@@ -221,7 +221,6 @@
                             <label for="job5" class="check-nomal">법률직</label>
                             <input type="checkbox" id="job6">
                             <label for="job6" class="check-nomal">사회복지ㆍ종교직</label>
-                            <input type="checkbox" id="job6">
                             <input type="checkbox" id="job7">
                             <label for="job7" class="check-nomal">경찰ㆍ소방직</label>
                             <input type="checkbox" id="job8">
