--- a/html/8-11_마이페이지-내정보열람목록.html
+++ b/html/8-11_마이페이지-내정보열람목록.html
@@ -83,106 +83,108 @@
             </div>
             <h2 class="contents-title">내 정보 활용 목록</h2>
 
-          <form>
-            <div class="table-top">
-                <p class="table-num">전체<span>10</span>건</p>
-                <div>
-                    <select name="sel" id="sel" class="select-nomal w120">
-                        <option value="최신순">최신순</option>
-                        <option value="선택1">선택1</option>
-                        <option value="선택2">선택2</option>
-                        <option value="선택3">선택3</option>
-                    </select>
-                    <select name="sel" id="sel" class="select-nomal w120">
-                        <option value="10개씩">10개씩</option>
-                        <option value="선택1">선택1</option>
-                        <option value="선택2">선택2</option>
-                        <option value="선택3">선택3</option>
-                    </select>
+          <div class="container">
+              <form>
+                <div class="table-top">
+                    <p class="table-num">전체<span>10</span>건</p>
+                    <div>
+                        <select name="sel" id="sel" class="select-nomal w120">
+                            <option value="최신순">최신순</option>
+                            <option value="선택1">선택1</option>
+                            <option value="선택2">선택2</option>
+                            <option value="선택3">선택3</option>
+                        </select>
+                        <select name="sel" id="sel" class="select-nomal w120">
+                            <option value="10개씩">10개씩</option>
+                            <option value="선택1">선택1</option>
+                            <option value="선택2">선택2</option>
+                            <option value="선택3">선택3</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <div class="table-wrap">
-              <table>
-                <thead>
-                  <tr>
-                    <th>번호</th>
-                    <th>기관명</th>
-                    <th>활용목적 및 조회사유</th>
-                    <th>선임일시</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                  <tr>
-                    <td>1</td>
-                    <td>인사혁신처</td>
-                    <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
-                    <td>2022-07-31</td>
-                  </tr>
-                </tbody>
-              </table>
-            </div>
-            <div class="pagination">
-              <!-- .active 를 붙이면 활성화 된 버튼으로 변경됩니다. -->
-                <button class="prev active"></button>
-                <button class="page">1</button>
-                <button class="page active">2</button>
-                <button class="next"></button>
-            </div>
-          </form>
+                <div class="table-wrap">
+                  <table>
+                    <thead>
+                      <tr>
+                        <th>번호</th>
+                        <th>기관명</th>
+                        <th>활용목적 및 조회사유</th>
+                        <th>선임일시</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                      <tr>
+                        <td>1</td>
+                        <td>인사혁신처</td>
+                        <td>◯◯위원회 위촉직 위원, ◯◯◯ 사업 모니터링, ◯◯◯ 추진계획 자문</td>
+                        <td>2022-07-31</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="pagination">
+                  <!-- .active 를 붙이면 활성화 된 버튼으로 변경됩니다. -->
+                    <button class="prev active"></button>
+                    <button class="page">1</button>
+                    <button class="page active">2</button>
+                    <button class="next"></button>
+                </div>
+              </form>
+          </div>
 
         </div>
     </section>
